fixed some errors so it runs now